Replace deprecated constructors by valueOf
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>