@@ -1,6 +1,6 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
- * Copyright (c) 1998, 2019 IBM Corporation. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 IBM Corporation. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -594,12 +594,12 @@ public class AdvancedQueryTestSuite extends JUnitTestCase {
             query.setParameter(1, employee.getId());
             query.setParameter(2, employee.getFirstName());
             arrayResult = (Object[])query.getSingleResult();
-            if ((arrayResult.length != 1) || (!new Integer(((Number)arrayResult[0]).intValue()).equals(employee.getId()))) {
+            if ((arrayResult.length != 1) || (!Integer.valueOf(((Number)arrayResult[0]).intValue()).equals(employee.getId()))) {
                 fail("Array result not correct: " + arrayResult);
             }
             listResult = query.getResultList();
             arrayResult = (Object[])listResult.get(0);
-            if ((arrayResult.length != 1) || (!new Integer(((Number)arrayResult[0]).intValue()).equals(employee.getId()))) {
+            if ((arrayResult.length != 1) || (!Integer.valueOf(((Number)arrayResult[0]).intValue()).equals(employee.getId()))) {
                 fail("Array result not correct: " + arrayResult);
             }
 
@@ -609,12 +609,12 @@ public class AdvancedQueryTestSuite extends JUnitTestCase {
             query.setParameter(1, employee.getId());
             query.setParameter(2, employee.getFirstName());
             Map mapResult = (Map)query.getSingleResult();
-            if ((mapResult.size() != 2) || (!mapResult.get("F_NAME").equals(employee.getFirstName())) || (!(new Integer(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
+            if ((mapResult.size() != 2) || (!mapResult.get("F_NAME").equals(employee.getFirstName())) || (!(Integer.valueOf(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
                 fail("Map result not correct: " + mapResult);
             }
             listResult = query.getResultList();
             mapResult = (Map)listResult.get(0);
-            if ((mapResult.size() != 2) || (!mapResult.get("F_NAME").equals(employee.getFirstName())) || (!(new Integer(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
+            if ((mapResult.size() != 2) || (!mapResult.get("F_NAME").equals(employee.getFirstName())) || (!(Integer.valueOf(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
                 fail("Map result not correct: " + mapResult);
             }
 
@@ -624,12 +624,12 @@ public class AdvancedQueryTestSuite extends JUnitTestCase {
             query.setParameter(1, employee.getId());
             query.setParameter(2, employee.getFirstName());
             mapResult = (Map)query.getSingleResult();
-            if ((mapResult.size() != 1) || (!(new Integer(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
+            if ((mapResult.size() != 1) || (!(Integer.valueOf(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
                 fail("Map result not correct: " + mapResult);
             }
             listResult = query.getResultList();
             mapResult = (Map)listResult.get(0);
-            if ((mapResult.size() != 1) || (!(new Integer(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
+            if ((mapResult.size() != 1) || (!(Integer.valueOf(((Number)mapResult.get("EMP_ID")).intValue())).equals(employee.getId()))) {
                 fail("Map result not correct: " + mapResult);
             }
 
@@ -638,12 +638,12 @@ public class AdvancedQueryTestSuite extends JUnitTestCase {
             query.setParameter(1, employee.getId());
             query.setParameter(2, employee.getFirstName());
             Object valueResult = query.getSingleResult();
-            if (!(new Integer(((Number)valueResult).intValue())).equals(employee.getId())) {
+            if (!(Integer.valueOf(((Number)valueResult).intValue())).equals(employee.getId())) {
                 fail("Value result not correct: " + valueResult);
             }
             listResult = query.getResultList();
             valueResult = listResult.get(0);
-            if (!(new Integer(((Number)valueResult).intValue())).equals(employee.getId())) {
+            if (!(Integer.valueOf(((Number)valueResult).intValue())).equals(employee.getId())) {
                 fail("Value result not correct: " + valueResult);
             }
         } finally {
